# pscweb2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  function_app.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: deploy_azure.yml  master_pscweb2-app.yml  master_pscweb3.yml
accounts/: forms.py  views.py
accounts/templates/accounts/: signup.html
production/: admin.py  forms.py  views.py
pscweb2/: asgi.py  settings.py  urls.py
rehearsal/views/: views.py
script/: models.py  urls.py
script/templates/script/: script_detail.html
script/views/: view_func.py  views.py
templates/registration/: login.html
