[project]
# プロジェクトの基本情報
name = "pscweb2"
version = "1.0.0"
description = "A web application for PSC, built with Django."
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
# Python 3.13以上を要求
requires-python = ">=3.13"
license = { text = "MIT" } # プロジェクトに合わせて変更してください

# プロジェクトの依存関係
dependencies = [
    "django>=5.0,<5.1",
    "gunicorn",
    "psycopg2-binary",
    "whitenoise",
    "dj-database-url",
    "python-dotenv",
    "playscript>=0.2.8",
    "weasyprint>=65.1",
    "mssql-django>=1.5",
    "pyodbc>=5.2.0",
]

[project.urls]
Homepage = "https://github.com/satamame/pscweb2"
Repository = "https://github.com/satamame/pscweb2"

# ビルドシステムの設定
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
