[project]
# プロジェクトの基本情報
name = "pscweb2"
version = "1.0.0"
description = "A web application for PSC, built with Django."
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
# Python 3.13以上を要求
requires-python = ">=3.11"
license = { text = "MIT" }

# 本番環境(Azure)で必要な依存関係
dependencies = [
    "Django>=5.0,<5.1",
    "azure-functions",
    "azure-storage-blob",
    "django-storages",
    "dj-database-url",
    "python-dotenv",
    "psycopg2-binary",
    "PyYAML>=6.0",
]

# 開発環境など、特定の状況でのみ必要な依存関係
[project.optional-dependencies]
# ローカルのDocker(PostgreSQL)環境用
local = [
    "psycopg2-binary>=2.9.9",
]

[project.urls]
Homepage = "https://github.com/satamame/pscweb2"
Repository = "https://github.com/OptimisticPessimist/pscweb2"

# ビルドシステムの設定
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["B", "C", "D", "E", "F", "I", "N", "Q", "R", "S", "T", "UP", "W", "Y"]
ignore = ["PLR0913", "PLR0914", "PLR0915"]
line-length = 120
